# gymops

./: .gitignore  AGENTS.md  README.md  pyproject.toml
gymops/: __init__.py  cli.py  db.py  models.py  report.py
tests/: conftest.py  test_cli.py  test_db.py  test_report.py
