[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gymops"
version = "0.1.0"
description = "lazygym — a terminal-based workout tracker for lazy lifters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "platformdirs>=4.2.0",
]

[project.scripts]
gymops = "gymops.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["gymops"]
